--- a/react-spring-app/docker-compose.yml
+++ b/react-spring-app/docker-compose.yml
@@ -43,11 +43,13 @@ services:
       - app-network
   
   nginx-proxy:
-    image: nginx:alpine
+    build: ./nginx
     ports:
-      - "3000:3000"
+      - "${NGINX_PORT}:${NGINX_PORT}"
+    env_file:
+      - .env.nginx
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
     depends_on:
       - backend
       - frontend
