--- a/react-spring-app/nginx/nginx.conf.template
+++ b/react-spring-app/nginx/nginx.conf.template
@@ -13,6 +13,7 @@ http {
 
     server {
         listen ${NGINX_PORT};
+        server_name localhost;
 
         location / {
             proxy_pass http://frontend;
